<resources>
    <string name="app_name">BackPack2.0</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="no_estas_registrado_reg_strate">¿No estas registrado? Regístrate</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="login">Login</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="correo_del_usuario">Correo del usuario</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="avanzado">Avanzado</string>
    <string name="salir">Salir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imggps">imgGps</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="listado_de_dispositivos">Listado de dispositivos</string>
    <string name="ingrese_un_apodo_para_su_gps">Ingrese un apodo para su GPS</string>
    <string name="ingresar_identificador_del_dispositivo">Ingresar Identificador del Dispositivo</string>
    <string name="guardar_dispositivo">Guardar Dispositivo</string>
    <string name="ver_dispositivos_registrados">Ver Dispositivos Registrados</string>
    <string name="dispositivos_guardados">Dispositivos Guardados</string>
    <string name="dispositivos">Dispositivos</string>
    <string name="opciones_avanzadas">Opciones Avanzadas</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="bienvenido_usuario_en_esta_pagina_tendras_toda_la_informacion_de_tu_perfil_tambien_podras_editar_tus_datos_tener_datos_de_interes_y_mucho_mas_que_estara_disponible_en_una_nueva_version_de_backpackgps">Bienvenido usuario en esta pagina tendras toda la informacion de tu perfil, tambien podras editar tus datos, tener datos de interes y mucho mas que estara disponible en una nueva version de backpackGPS</string>
    <string name="usuario">USUARIO</string>
    <string name="imagen_de_perfil">Imagen de perfil</string>
    <string name="mapa">mapa</string>
    <string name="busca_tu_dispositivo">Busca tu Dispositivo</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="buscar">Buscar</string>
    <string name="ingresar_un_gps">Ingresar un GPS</string>
    <string name="bpgps">BPGPS</string>
    <string name="nombre">nombre</string>
    <string name="descripcion">descripcion</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
</resources>